--- a/style.css
+++ b/style.css
@@ -3,34 +3,12 @@ body {
 }
 
 h1 {
-    text-align: center;
-    font-size: 60px;
+    text-align : center; 
+    color : black;
+    background : white;
 }
 
-h2{
-    font-size: 40px;
-    background-color: peru;
-}
-
-a {
-    color: black;
-    font-size: 20px;
-}
-
-p, img {
-    border: 3px solid peru;
-}
-
-p, table {
-    font-size: 20px;
-}
-
-table{
-    background-color: lightyellow;
-    text-align: center;
-    border-collapse: collapse;
-}
-
-td{
-    border: 1px solid brown;
+img {
+    width: 125px
+    height: 125px
 }
