--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ h1 {
 }
 
 img {
-    width: 125px
-    height: 125px
+    width: 400px;
+    height: 300px;
 }
+.qq{
+    
+    width: 900px;
+    height: 600px;
+}
+
